--- a/HomeWork1/Task1/package.json
+++ b/HomeWork1/Task1/package.json
@@ -1,11 +1,16 @@
 {
   "name": "task1",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-  	"task1": "node index.js"
+    "task1": "nodemon --exec babel-node index.js"
   },
   "author": "Dariia Kukuruzniak",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/node": "^7.12.10",
+    "nodemon": "^2.0.7"
+  }
 }
