--- a/HomeWork1/Task2/package.json
+++ b/HomeWork1/Task2/package.json
@@ -1,15 +1,17 @@
 {
   "name": "task2",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "task2": "node index.js"
+    "task2": "nodemon --exec babel-node index.js"
   },
   "author": "Dariia Kukuruzniak",
   "license": "ISC",
   "dependencies": {
-    "convert-csv-to-json": "^1.3.0",
-    "csvtojson": "^2.0.10"
+    "csvtojson": "^2.0.10",
+    "@babel/core": "^7.12.10",
+    "@babel/node": "^7.12.10",
+    "nodemon": "^2.0.7"
   }
 }
